<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="14dp"
    android:layout_marginEnd="14dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_chart_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$ 36,680.6"
        style="@style/CoinBitText.Huge"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_chart_updown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="▲"
        android:paddingEnd="4dp"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/tertiaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_chart_price" />

    <TextView
        android:id="@+id/txt_chart_change1"
        style="@style/CoinBitText.BodyTertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingEnd="12dp"
        android:text="-$0.04"
        app:layout_constraintBottom_toBottomOf="@+id/txt_chart_updown"
        app:layout_constraintStart_toEndOf="@+id/txt_chart_updown"
        app:layout_constraintTop_toBottomOf="@+id/txt_chart_price" />

    <TextView
        android:id="@+id/txt_chart_change2"
        style="@style/CoinBitText.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="+8.1%"
        android:textColor="@color/tertiaryTextColor"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txt_chart_change1"
        app:layout_constraintTop_toBottomOf="@+id/txt_chart_price" />

    <com.robinhood.spark.SparkView
        android:id="@+id/sparkview_main"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        app:spark_animateChanges="true"
        app:spark_lineColor="@color/colorPrimary"
        app:spark_scrubEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_chart_change1" />

    <TextView
        android:id="@+id/txtChartError"
        android:visibility="gone"
        style="@style/CoinBitText.Body1Alternate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Some Error"
        app:layout_constraintBottom_toBottomOf="@+id/sparkview_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/sparkview_main"
        app:layout_constraintTop_toTopOf="@+id/sparkview_main" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:weightSum="7"
        app:layout_constraintTop_toBottomOf="@id/sparkview_main"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp">


        <RadioButton
            android:id="@+id/radio_12h"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/period_1h"
            android:textColor="@drawable/range_radio_btn_selector"
            android:background="@drawable/range_radio_btn_selector_background"
            android:checked="true"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="center"/>

        <RadioButton
            android:id="@+id/radio_1d"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/period_1day"
            android:textColor="@drawable/range_radio_btn_selector"
            android:background="@drawable/range_radio_btn_selector_background"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="center"/>

        <RadioButton
            android:id="@+id/radio_1w"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/period_1week"
            android:textColor="@drawable/range_radio_btn_selector"
            android:background="@drawable/range_radio_btn_selector_background"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="center"/>

        <RadioButton
            android:id="@+id/radio_1m"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/period_1month"
            android:textColor="@drawable/range_radio_btn_selector"
            android:background="@drawable/range_radio_btn_selector_background"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="center"/>


        <RadioButton
            android:id="@+id/radio_3m"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/period_3month"
            android:textColor="@drawable/range_radio_btn_selector"
            android:background="@drawable/range_radio_btn_selector_background"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="center"/>

        <RadioButton
            android:id="@+id/radio_1y"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/period_1year"
            android:textColor="@drawable/range_radio_btn_selector"
            android:background="@drawable/range_radio_btn_selector_background"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="center"/>

        <RadioButton
            android:id="@+id/radio_all"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/period_all"
            android:textColor="@drawable/range_radio_btn_selector"
            android:background="@drawable/range_radio_btn_selector_background"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="center"/>





    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>